welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: value µ is not a member of Int
		else if (x==0 && aig==1) {y=y+1 µ
                                                ^